--- a/codecov.yml
+++ b/codecov.yml
@@ -24,3 +24,7 @@ comment:
   layout: "reach, diff, flags, files, footer"
   behavior: default
   require_changes: no
+
+ignore:
+  - "src/jaegertracing/thrift-gen"
+  - "**/*Test.cpp"
