Simplify test cases for instantiating tracer
Signed-off-by: Isaac Hier <ihier@uber.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -213,6 +213,7 @@ if(BUILD_TESTING)
         src/jaegertracing/reporters/ReporterTest.cpp
         src/jaegertracing/samplers/SamplerTest.cpp
         src/jaegertracing/testutils/MockAgentTest.cpp
+        src/jaegertracing/testutils/TracerUtil.cpp
         src/jaegertracing/testutils/TUDPTransportTest.cpp
         src/jaegertracing/utils/ErrorUtilTest.cpp
         src/jaegertracing/utils/RateLimiterTest.cpp
