--- a/cmake/Config.cmake.in
+++ b/cmake/Config.cmake.in
@@ -2,8 +2,7 @@
 
 set(package_deps @package_deps@)
 foreach(dep IN LISTS package_deps)
-    if(dep STREQUAL "OpenSSL" OR
-       dep STREQUAL "Threads")
+    if(dep STREQUAL "OpenSSL" OR dep STREQUAL "Threads")
         find_package(${dep} REQUIRED)
     elseif(dep STREQUAL "OpenTracing" OR
            dep STREQUAL "yaml-cpp")
@@ -12,6 +11,9 @@ foreach(dep IN LISTS package_deps)
         find_package(${dep} @hunter_config@ REQUIRED)
     endif()
 endforeach()
+
+set(boost_components @boost_components@)
+find_package(Boost CONFIG REQUIRED ${boost_components})
 
 check_required_components("@PROJECT_NAME@")
 
