--- a/crossdock/Dockerfile
+++ b/crossdock/Dockerfile
@@ -1,6 +1,6 @@
 FROM scratch
 
-ADD ../build/crossdock /
+ADD crossdock /
 
 ENV AGENT_HOST_PORT=jaeger-agent:5775
 ENV SAMPLING_SERVER_URL=http://test_driver:5778/sampling
