Fix crossdock bugs
Signed-off-by: Isaac Hier <isaachier@gmail.com>

--- a/crossdock/docker-compose.yml
+++ b/crossdock/docker-compose.yml
@@ -44,7 +44,7 @@ services:
     cpp:
         depends_on:
             - test_driver
-        build: .
+        build: ..
         ports:
             - "8080-8082"
 
