--- a/crossdock/docker-compose.yml
+++ b/crossdock/docker-compose.yml
@@ -7,19 +7,18 @@ services:
             - test_driver
             - go
             - cpp
-            - java
         environment:
-            - WAIT_FOR=test_driver,go,cpp,java
+            - WAIT_FOR=test_driver,go,cpp
             - WAIT_FOR_TIMEOUT=60s
 
             - CALL_TIMEOUT=60s
 
             - AXIS_CLIENT=go
-            - AXIS_S1NAME=go,cpp,java
+            - AXIS_S1NAME=go,cpp
             - AXIS_SAMPLED=true,false
-            - AXIS_S2NAME=go,cpp,java
+            - AXIS_S2NAME=go,cpp
             - AXIS_S2TRANSPORT=http
-            - AXIS_S3NAME=go,cpp,java
+            - AXIS_S3NAME=go,cpp
             - AXIS_S3TRANSPORT=http
 
             - BEHAVIOR_TRACE=client,s1name,sampled,s2name,s2transport,s3name,s3transport
@@ -33,11 +32,6 @@ services:
 
     go:
         image: jaegertracing/xdock-go
-        ports:
-            - "8080-8082"
-
-    java:
-        image: jaegertracing/xdock-java
         ports:
             - "8080-8082"
 
