--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ matrix:
         - lcov
     env:
     - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
+    - NO_HUNTER=ON
   - os: linux
     addons:
       apt:
